src/Parsing/Generated/LaTeXParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.12.0
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from src/antlr/LaTeX.g4 by ANTLR 4.12.0

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.Collections.Generic;
using System.Diagnostics;
using System.IO;
using System.Text;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.12.0")]
[System.CLSCompliant(false)]
public partial class LaTeXParser : Parser
{
    protected static DFA[] decisionToDFA;
    protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
    public const int
        T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
        T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
        T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, T__22 = 23, T__23 = 24,
        T__24 = 25, T__25 = 26, T__26 = 27, T__27 = 28, T__28 = 29, T__29 = 30, T__30 = 31,
        T__31 = 32, T__32 = 33, T__33 = 34, T__34 = 35, T__35 = 36, T__36 = 37, T__37 = 38,
        FUNCTION = 39, LETTER = 40, DIGIT = 41, WS = 42, MISC_SKIP = 43;
    public const int
        RULE_prog = 0, RULE_funcCall = 1, RULE_exprList = 2, RULE_number = 3,
        RULE_id = 4, RULE_constant = 5, RULE_desc = 6, RULE_subscript = 7, RULE_varMod = 8,
        RULE_var = 9, RULE_stringLiteral = 10, RULE_assign = 11, RULE_matrixStart = 12,
        RULE_matrixEnd = 13, RULE_matrix = 14, RULE_matrixRow = 15, RULE_matrixRowCommaDelimited = 16,
        RULE_lessThan = 17, RULE_lessThanEqual = 18, RULE_greaterThan = 19, RULE_greaterThanEqual = 20,
        RULE_comparison = 21, RULE_expr = 22, RULE_exprFunc1 = 23, RULE_exprFunc2 = 24,
        RULE_exprGroup = 25, RULE_exprParam = 26;
    public static readonly string[] ruleNames = {
        "prog", "funcCall", "exprList", "number", "id", "constant", "desc", "subscript",
        "varMod", "var", "stringLiteral", "assign", "matrixStart", "matrixEnd",
        "matrix", "matrixRow", "matrixRowCommaDelimited", "lessThan", "lessThanEqual",
        "greaterThan", "greaterThanEqual", "comparison", "expr", "exprFunc1",
        "exprFunc2", "exprGroup", "exprParam"
    };

    private static readonly string[] _LiteralNames = {
        null, "'('", "','", "'.'", "'{'", "'}'", "'\\pi'", "'-'", "'_{'", "'_'",
        "'\\bar'", "'\"'", "'''", "'='", "'\\begin{matrix}'", "'\\end{matrix}'",
        "'&'", "'\\\\'", "'<'", "'\\le'", "'q'", "'<='", "'>'", "'\\ge'", "'>='",
        "'^'", "'^{'", "'*'", "'\\ast'", "'\\times'", "'/'", "'\\dot'", "'+'",
        "'\\sqrt'", "'\\frac'", "'\\sfrac'", "')'", "'['", "']'"
    };
    private static readonly string[] _SymbolicNames = {
        null, null, null, null, null, null, null, null, null, null, null, null,
        null, null, null, null, null, null, null, null, null, null, null, null,
        null, null, null, null, null, null, null, null, null, null, null, null,
        null, null, null, "FUNCTION", "LETTER", "DIGIT", "WS", "MISC_SKIP"
    };
    public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

    [NotNull]
    public override IVocabulary Vocabulary
    {
        get
        {
            return DefaultVocabulary;
        }
    }

    public override string GrammarFileName { get { return "LaTeX.g4"; } }

    public override string[] RuleNames { get { return ruleNames; } }

    public override int[] SerializedAtn { get { return _serializedATN; } }

    static LaTeXParser()
    {
        decisionToDFA = new DFA[_ATN.NumberOfDecisions];
        for (int i = 0; i < _ATN.NumberOfDecisions; i++)
        {
            decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
        }
    }

    public LaTeXParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

    public LaTeXParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
    : base(input, output, errorOutput)
    {
        Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
    }

    public partial class ProgContext : ParserRuleContext
    {
        [System.Diagnostics.DebuggerNonUserCode]
        public AssignContext assign()
        {
            return GetRuleContext<AssignContext>(0);
        }
        [System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(LaTeXParser.Eof, 0); }
        public ProgContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_prog; } }
        [System.Diagnostics.DebuggerNonUserCode]
        public override void EnterRule(IParseTreeListener listener)
        {
            ILaTeXListener typedListener = listener as ILaTeXListener;
            if (typedListener != null) typedListener.EnterProg(this);
        }
        [System.Diagnostics.DebuggerNonUserCode]
        public override void ExitRule(IParseTreeListener listener)
        {
            ILaTeXListener typedListener = listener as ILaTeXListener;
            if (typedListener != null) typedListener.ExitProg(this);
        }
    }

    [RuleVersion(0)]
    public ProgContext prog()
    {
        ProgContext _localctx = new ProgContext(Context, State);
        EnterRule(_localctx, 0, RULE_prog);
        try
        {
            EnterOuterAlt(_localctx, 1);
            {
                State = 54;
                assign();
                State = 55;
                Match(Eof);
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            ErrorHandler.ReportError(this, re);
            ErrorHandler.Recover(this, re);
        }
        finally
        {
            ExitRule();
        }
        return _localctx;
    }

    public partial class FuncCallContext : ParserRuleContext
    {
        [System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FUNCTION() { return GetToken(LaTeXParser.FUNCTION, 0); }
        public FuncCallContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_funcCall; } }
        [System.Diagnostics.DebuggerNonUserCode]
        public override void EnterRule(IParseTreeListener listener)
        {
            ILaTeXListener typedListener = listener as ILaTeXListener;
            if (typedListener != null) typedListener.EnterFuncCall(this);
        }
        [System.Diagnostics.DebuggerNonUserCode]
        public override void ExitRule(IParseTreeListener listener)
        {
            ILaTeXListener typedListener = listener as ILaTeXListener;
            if (typedListener != null) typedListener.ExitFuncCall(this);
        }
    }

    [RuleVersion(0)]
    public FuncCallContext funcCall()
    {
        FuncCallContext _localctx = new FuncCallContext(Context, State);
        EnterRule(_localctx, 2, RULE_funcCall);
        try
        {
            EnterOuterAlt(_localctx, 1);
            {
                State = 57;
                Match(FUNCTION);
                State = 58;
                Match(T__0);
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            ErrorHandler.ReportError(this, re);
            ErrorHandler.Recover(this, re);
        }
        finally
        {
            ExitRule();
        }
        return _localctx;
    }

    public partial class ExprListContext : ParserRuleContext
    {
        [System.Diagnostics.DebuggerNonUserCode]
        public ExprContext[] expr()
        {
            return GetRuleContexts<ExprContext>();
        }
        [System.Diagnostics.DebuggerNonUserCode]
        public ExprContext expr(int i)
        {
            return GetRuleContext<ExprContext>(i);
        }
        [System.Diagnostics.DebuggerNonUserCode]
        public MatrixStartContext matrixStart()
        {
            return GetRuleContext<MatrixStartContext>(0);
        }
        [System.Diagnostics.DebuggerNonUserCode]
        public MatrixRowCommaDelimitedContext matrixRowCommaDelimited()
        {
            return GetRuleContext<MatrixRowCommaDelimitedContext>(0);
        }
        [System.Diagnostics.DebuggerNonUserCode]
        public MatrixEndContext matrixEnd()
        {
            return GetRuleContext<MatrixEndContext>(0);
        }
        public ExprListContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_exprList; } }
        [System.Diagnostics.DebuggerNonUserCode]
        public override void EnterRule(IParseTreeListener listener)
        {
            ILaTeXListener typedListener = listener as ILaTeXListener;
            if (typedListener != null) typedListener.EnterExprList(this);
        }
        [System.Diagnostics.DebuggerNonUserCode]
        public override void ExitRule(IParseTreeListener listener)
        {
            ILaTeXListener typedListener = listener as ILaTeXListener;
            if (typedListener != null) typedListener.ExitExprList(this);
        }
    }

    [RuleVersion(0)]
    public ExprListContext exprList()
    {
        ExprListContext _localctx = new ExprListContext(Context, State);
        EnterRule(_localctx, 4, RULE_exprList);
        int _la;
        try
        {
            State = 72;
            ErrorHandler.Sync(this);
            switch (Interpreter.AdaptivePredict(TokenStream, 1, Context))
            {
                case 1:
                    EnterOuterAlt(_localctx, 1);
                    {
                        State = 60;
                        expr(0);
                        State = 65;
                        ErrorHandler.Sync(this);
                        _la = TokenStream.LA(1);
                        while (_la == T__1)
                        {
                            {
                                {
                                    State = 61;
                                    Match(T__1);
                                    State = 62;
                                    expr(0);
                                }
                            }
                            State = 67;
                            ErrorHandler.Sync(this);
                            _la = TokenStream.LA(1);
                        }
                    }
                    break;
                case 2:
                    EnterOuterAlt(_localctx, 2);
                    {
                        State = 68;
                        matrixStart();
                        State = 69;
                        matrixRowCommaDelimited();
                        State = 70;
                        matrixEnd();
                    }
                    break;
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            ErrorHandler.ReportError(this, re);
            ErrorHandler.Recover(this, re);
        }
        finally
        {
            ExitRule();
        }
        return _localctx;
    }

    public partial class NumberContext : ParserRuleContext
    {
        [System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] DIGIT() { return GetTokens(LaTeXParser.DIGIT); }
        [System.Diagnostics.DebuggerNonUserCode]
        public ITerminalNode DIGIT(int i)
        {
            return GetToken(LaTeXParser.DIGIT, i);
        }
        public NumberContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_number; } }
        [System.Diagnostics.DebuggerNonUserCode]
        public override void EnterRule(IParseTreeListener listener)
        {
            ILaTeXListener typedListener = listener as ILaTeXListener;
            if (typedListener != null) typedListener.EnterNumber(this);
        }
        [System.Diagnostics.DebuggerNonUserCode]
        public override void ExitRule(IParseTreeListener listener)
        {
            ILaTeXListener typedListener = listener as ILaTeXListener;
            if (typedListener != null) typedListener.ExitNumber(this);
        }
    }

    [RuleVersion(0)]
    public NumberContext number()
    {
        NumberContext _localctx = new NumberContext(Context, State);
        EnterRule(_localctx, 6, RULE_number);
        int _la;
        try
        {
            int _alt;
            State = 91;
            ErrorHandler.Sync(this);
            switch (Interpreter.AdaptivePredict(TokenStream, 5, Context))
            {
                case 1:
                    EnterOuterAlt(_localctx, 1);
                    {
                        State = 77;
                        ErrorHandler.Sync(this);
                        _la = TokenStream.LA(1);
                        while (_la == DIGIT)
                        {
                            {
                                {
                                    State = 74;
                                    Match(DIGIT);
                                }
                            }
                            State = 79;
                            ErrorHandler.Sync(this);
                            _la = TokenStream.LA(1);
                        }
                        State = 80;
                        Match(T__2);
                        State = 82;
                        ErrorHandler.Sync(this);
                        _alt = 1;
                        do
                        {
                            switch (_alt)
                            {
                                case 1:
                                    {
                                        {
                                            State = 81;
                                            Match(DIGIT);
                                        }
                                    }
                                    break;
                                default:
                                    throw new NoViableAltException(this);
                            }
                            State = 84;
                            ErrorHandler.Sync(this);
                            _alt = Interpreter.AdaptivePredict(TokenStream, 3, Context);
                        } while (_alt != 2 && _alt != global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER);
                    }
                    break;
                case 2:
                    EnterOuterAlt(_localctx, 2);
                    {
                        State = 87;
                        ErrorHandler.Sync(this);
                        _alt = 1;
                        do
                        {
                            switch (_alt)
                            {
                                case 1:
                                    {
                                        {
                                            State = 86;
                                            Match(DIGIT);
                                        }
                                    }
                                    break;
                                default:
                                    throw new NoViableAltException(this);
                            }
                            State = 89;
                            ErrorHandler.Sync(this);
                            _alt = Interpreter.AdaptivePredict(TokenStream, 4, Context);
                        } while (_alt != 2 && _alt != global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER);
                    }
                    break;
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            ErrorHandler.ReportError(this, re);
            ErrorHandler.Recover(this, re);
        }
        finally
        {
            ExitRule();
        }
        return _localctx;
    }

    public partial class IdContext : ParserRuleContext
    {
        [System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] LETTER() { return GetTokens(LaTeXParser.LETTER); }
        [System.Diagnostics.DebuggerNonUserCode]
        public ITerminalNode LETTER(int i)
        {
            return GetToken(LaTeXParser.LETTER, i);
        }
        [System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] DIGIT() { return GetTokens(LaTeXParser.DIGIT); }
        [System.Diagnostics.DebuggerNonUserCode]
        public ITerminalNode DIGIT(int i)
        {
            return GetToken(LaTeXParser.DIGIT, i);
        }
        [System.Diagnostics.DebuggerNonUserCode]
        public IdContext id()
        {
            return GetRuleContext<IdContext>(0);
        }
        public IdContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_id; } }
        [System.Diagnostics.DebuggerNonUserCode]
        public override void EnterRule(IParseTreeListener listener)
        {
            ILaTeXListener typedListener = listener as ILaTeXListener;
            if (typedListener != null) typedListener.EnterId(this);
        }
        [System.Diagnostics.DebuggerNonUserCode]
        public override void ExitRule(IParseTreeListener listener)
        {
            ILaTeXListener typedListener = listener as ILaTeXListener;
            if (typedListener != null) typedListener.ExitId(this);
        }
    }

    [RuleVersion(0)]
    public IdContext id()
    {
        IdContext _localctx = new IdContext(Context, State);
        EnterRule(_localctx, 8, RULE_id);
        int _la;
        try
        {
            int _alt;
            State = 104;
            ErrorHandler.Sync(this);
            switch (TokenStream.LA(1))
            {
                case LETTER:
                    EnterOuterAlt(_localctx, 1);
                    {
                        State = 93;
                        Match(LETTER);
                        State = 97;
                        ErrorHandler.Sync(this);
                        _alt = Interpreter.AdaptivePredict(TokenStream, 6, Context);
                        while (_alt != 2 && _alt != global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER)
                        {
                            if (_alt == 1)
                            {
                                {
                                    {
                                        State = 94;
                                        _la = TokenStream.LA(1);
                                        if (!(_la == LETTER || _la == DIGIT))
                                        {
                                            ErrorHandler.RecoverInline(this);
                                        }
                                        else
                                        {
                                            ErrorHandler.ReportMatch(this);
                                            Consume();
                                        }
                                    }
                                }
                            }
                            State = 99;
                            ErrorHandler.Sync(this);
                            _alt = Interpreter.AdaptivePredict(TokenStream, 6, Context);
                        }
                    }
                    break;
                case T__3:
                    EnterOuterAlt(_localctx, 2);
                    {
                        State = 100;
                        Match(T__3);
                        State = 101;
                        id();
                        State = 102;
                        Match(T__4);
                    }
                    break;
                default:
                    throw new NoViableAltException(this);
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            ErrorHandler.ReportError(this, re);
            ErrorHandler.Recover(this, re);
        }
        finally
        {
            ExitRule();
        }
        return _localctx;
    }

    public partial class ConstantContext : ParserRuleContext
    {
        public ConstantContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_constant; } }
        [System.Diagnostics.DebuggerNonUserCode]
        public override void EnterRule(IParseTreeListener listener)
        {
            ILaTeXListener typedListener = listener as ILaTeXListener;
            if (typedListener != null) typedListener.EnterConstant(this);
        }
        [System.Diagnostics.DebuggerNonUserCode]
        public override void ExitRule(IParseTreeListener listener)
        {
            ILaTeXListener typedListener = listener as ILaTeXListener;
            if (typedListener != null) typedListener.ExitConstant(this);
        }
    }

    [RuleVersion(0)]
    public ConstantContext constant()
    {
        ConstantContext _localctx = new ConstantContext(Context, State);
        EnterRule(_localctx, 10, RULE_constant);
        try
        {
            EnterOuterAlt(_localctx, 1);
            {
                State = 106;
                Match(T__5);
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            ErrorHandler.ReportError(this, re);
            ErrorHandler.Recover(this, re);
        }
        finally
        {
            ExitRule();
        }
        return _localctx;
    }

    public partial class DescContext : ParserRuleContext
    {
        [System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] DIGIT() { return GetTokens(LaTeXParser.DIGIT); }
        [System.Diagnostics.DebuggerNonUserCode]
        public ITerminalNode DIGIT(int i)
        {
            return GetToken(LaTeXParser.DIGIT, i);
        }
        [System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] LETTER() { return GetTokens(LaTeXParser.LETTER); }
        [System.Diagnostics.DebuggerNonUserCode]
        public ITerminalNode LETTER(int i)
        {
            return GetToken(LaTeXParser.LETTER, i);
        }
        [System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] FUNCTION() { return GetTokens(LaTeXParser.FUNCTION); }
        [System.Diagnostics.DebuggerNonUserCode]
        public ITerminalNode FUNCTION(int i)
        {
            return GetToken(LaTeXParser.FUNCTION, i);
        }
        public DescContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_desc; } }
        [System.Diagnostics.DebuggerNonUserCode]
        public override void EnterRule(IParseTreeListener listener)
        {
            ILaTeXListener typedListener = listener as ILaTeXListener;
            if (typedListener != null) typedListener.EnterDesc(this);
        }
        [System.Diagnostics.DebuggerNonUserCode]
        public override void ExitRule(IParseTreeListener listener)
        {
            ILaTeXListener typedListener = listener as ILaTeXListener;
            if (typedListener != null) typedListener.ExitDesc(this);
        }
    }

    [RuleVersion(0)]
    public DescContext desc()
    {
        DescContext _localctx = new DescContext(Context, State);
        EnterRule(_localctx, 12, RULE_desc);
        int _la;
        try
        {
            EnterOuterAlt(_localctx, 1);
            {
                State = 109;
                ErrorHandler.Sync(this);
                _la = TokenStream.LA(1);
                do
                {
                    {
                        {
                            State = 108;
                            _la = TokenStream.LA(1);
                            if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & 3848290697348L) != 0)))
                            {
                                ErrorHandler.RecoverInline(this);
                            }
                            else
                            {
                                ErrorHandler.ReportMatch(this);
                                Consume();
                            }
                        }
                    }
                    State = 111;
                    ErrorHandler.Sync(this);
                    _la = TokenStream.LA(1);
                } while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 3848290697348L) != 0));
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            ErrorHandler.ReportError(this, re);
            ErrorHandler.Recover(this, re);
        }
        finally
        {
            ExitRule();
        }
        return _localctx;
    }

    public partial class SubscriptContext : ParserRuleContext
    {
        [System.Diagnostics.DebuggerNonUserCode]
        public DescContext desc()
        {
            return GetRuleContext<DescContext>(0);
        }
        [System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DIGIT() { return GetToken(LaTeXParser.DIGIT, 0); }
        [System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LETTER() { return GetToken(LaTeXParser.LETTER, 0); }
        public SubscriptContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_subscript; } }
        [System.Diagnostics.DebuggerNonUserCode]
        public override void EnterRule(IParseTreeListener listener)
        {
            ILaTeXListener typedListener = listener as ILaTeXListener;
            if (typedListener != null) typedListener.EnterSubscript(this);
        }
        [System.Diagnostics.DebuggerNonUserCode]
        public override void ExitRule(IParseTreeListener listener)
        {
            ILaTeXListener typedListener = listener as ILaTeXListener;
            if (typedListener != null) typedListener.ExitSubscript(this);
        }
    }

    [RuleVersion(0)]
    public SubscriptContext subscript()
    {
        SubscriptContext _localctx = new SubscriptContext(Context, State);
        EnterRule(_localctx, 14, RULE_subscript);
        int _la;
        try
        {
            State = 119;
            ErrorHandler.Sync(this);
            switch (TokenStream.LA(1))
            {
                case T__7:
                    EnterOuterAlt(_localctx, 1);
                    {
                        State = 113;
                        Match(T__7);
                        State = 114;
                        desc();
                        State = 115;
                        Match(T__4);
                    }
                    break;
                case T__8:
                    EnterOuterAlt(_localctx, 2);
                    {
                        State = 117;
                        Match(T__8);
                        State = 118;
                        _la = TokenStream.LA(1);
                        if (!(_la == LETTER || _la == DIGIT))
                        {
                            ErrorHandler.RecoverInline(this);
                        }
                        else
                        {
                            ErrorHandler.ReportMatch(this);
                            Consume();
                        }
                    }
                    break;
                default:
                    throw new NoViableAltException(this);
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            ErrorHandler.ReportError(this, re);
            ErrorHandler.Recover(this, re);
        }
        finally
        {
            ExitRule();
        }
        return _localctx;
    }

    public partial class VarModContext : ParserRuleContext
    {
        public VarModContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_varMod; } }
        [System.Diagnostics.DebuggerNonUserCode]
        public override void EnterRule(IParseTreeListener listener)
        {
            ILaTeXListener typedListener = listener as ILaTeXListener;
            if (typedListener != null) typedListener.EnterVarMod(this);
        }
        [System.Diagnostics.DebuggerNonUserCode]
        public override void ExitRule(IParseTreeListener listener)
        {
            ILaTeXListener typedListener = listener as ILaTeXListener;
            if (typedListener != null) typedListener.ExitVarMod(this);
        }
    }

    [RuleVersion(0)]
    public VarModContext varMod()
    {
        VarModContext _localctx = new VarModContext(Context, State);
        EnterRule(_localctx, 16, RULE_varMod);
        try
        {
            EnterOuterAlt(_localctx, 1);
            {
                State = 121;
                Match(T__9);
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            ErrorHandler.ReportError(this, re);
            ErrorHandler.Recover(this, re);
        }
        finally
        {
            ExitRule();
        }
        return _localctx;
    }

    public partial class VarContext : ParserRuleContext
    {
        [System.Diagnostics.DebuggerNonUserCode]
        public VarModContext varMod()
        {
            return GetRuleContext<VarModContext>(0);
        }
        [System.Diagnostics.DebuggerNonUserCode]
        public IdContext id()
        {
            return GetRuleContext<IdContext>(0);
        }
        [System.Diagnostics.DebuggerNonUserCode]
        public SubscriptContext subscript()
        {
            return GetRuleContext<SubscriptContext>(0);
        }
        public VarContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_var; } }
        [System.Diagnostics.DebuggerNonUserCode]
        public override void EnterRule(IParseTreeListener listener)
        {
            ILaTeXListener typedListener = listener as ILaTeXListener;
            if (typedListener != null) typedListener.EnterVar(this);
        }
        [System.Diagnostics.DebuggerNonUserCode]
        public override void ExitRule(IParseTreeListener listener)
        {
            ILaTeXListener typedListener = listener as ILaTeXListener;
            if (typedListener != null) typedListener.ExitVar(this);
        }
    }

    [RuleVersion(0)]
    public VarContext var()
    {
        VarContext _localctx = new VarContext(Context, State);
        EnterRule(_localctx, 18, RULE_var);
        try
        {
            State = 134;
            ErrorHandler.Sync(this);
            switch (TokenStream.LA(1))
            {
                case T__9:
                    EnterOuterAlt(_localctx, 1);
                    {
                        State = 123;
                        varMod();
                        State = 124;
                        Match(T__3);
                        State = 125;
                        id();
                        State = 126;
                        Match(T__4);
                        State = 128;
                        ErrorHandler.Sync(this);
                        switch (Interpreter.AdaptivePredict(TokenStream, 10, Context))
                        {
                            case 1:
                                {
                                    State = 127;
                                    subscript();
                                }
                                break;
                        }
                    }
                    break;
                case T__3:
                case LETTER:
                    EnterOuterAlt(_localctx, 2);
                    {
                        State = 130;
                        id();
                        State = 132;
                        ErrorHandler.Sync(this);
                        switch (Interpreter.AdaptivePredict(TokenStream, 11, Context))
                        {
                            case 1:
                                {
                                    State = 131;
                                    subscript();
                                }
                                break;
                        }
                    }
                    break;
                default:
                    throw new NoViableAltException(this);
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            ErrorHandler.ReportError(this, re);
            ErrorHandler.Recover(this, re);
        }
        finally
        {
            ExitRule();
        }
        return _localctx;
    }

    public partial class StringLiteralContext : ParserRuleContext
    {
        public StringLiteralContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_stringLiteral; } }
        [System.Diagnostics.DebuggerNonUserCode]
        public override void EnterRule(IParseTreeListener listener)
        {
            ILaTeXListener typedListener = listener as ILaTeXListener;
            if (typedListener != null) typedListener.EnterStringLiteral(this);
        }
        [System.Diagnostics.DebuggerNonUserCode]
        public override void ExitRule(IParseTreeListener listener)
        {
            ILaTeXListener typedListener = listener as ILaTeXListener;
            if (typedListener != null) typedListener.ExitStringLiteral(this);
        }
    }

    [RuleVersion(0)]
    public StringLiteralContext stringLiteral()
    {
        StringLiteralContext _localctx = new StringLiteralContext(Context, State);
        EnterRule(_localctx, 20, RULE_stringLiteral);
        try
        {
            int _alt;
            State = 152;
            ErrorHandler.Sync(this);
            switch (TokenStream.LA(1))
            {
                case T__10:
                    EnterOuterAlt(_localctx, 1);
                    {
                        State = 136;
                        Match(T__10);
                        State = 140;
                        ErrorHandler.Sync(this);
                        _alt = Interpreter.AdaptivePredict(TokenStream, 13, Context);
                        while (_alt != 1 && _alt != global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER)
                        {
                            if (_alt == 1 + 1)
                            {
                                {
                                    {
                                        State = 137;
                                        MatchWildcard();
                                    }
                                }
                            }
                            State = 142;
                            ErrorHandler.Sync(this);
                            _alt = Interpreter.AdaptivePredict(TokenStream, 13, Context);
                        }
                        State = 143;
                        Match(T__10);
                    }
                    break;
                case T__11:
                    EnterOuterAlt(_localctx, 2);
                    {
                        State = 144;
                        Match(T__11);
                        State = 148;
                        ErrorHandler.Sync(this);
                        _alt = Interpreter.AdaptivePredict(TokenStream, 14, Context);
                        while (_alt != 1 && _alt != global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER)
                        {
                            if (_alt == 1 + 1)
                            {
                                {
                                    {
                                        State = 145;
                                        MatchWildcard();
                                    }
                                }
                            }
                            State = 150;
                            ErrorHandler.Sync(this);
                            _alt = Interpreter.AdaptivePredict(TokenStream, 14, Context);
                        }
                        State = 151;
                        Match(T__11);
                    }
                    break;
                default:
                    throw new NoViableAltException(this);
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            ErrorHandler.ReportError(this, re);
            ErrorHandler.Recover(this, re);
        }
        finally
        {
            ExitRule();
        }
        return _localctx;
    }
